# twitter-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  test-mcp.ts  test-remote.ts  verify.ts
src/: config.ts  index.ts  oauth2Client.ts  twitterClient.ts  types.ts
src/twitter_mcp/: __init__.py  config.py  oauth1.py  oauth2.py  server.py
