[project]
name = "twitter-mcp"
version = "1.0.0"
description = "Twitter/X API MCP server (OAuth 1.0a + optional OAuth 2.0)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "authlib>=1.3",
    "uvicorn>=0.30",
    "starlette>=0.38",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
twitter-mcp = "twitter_mcp.server:main"